FIX: コマンドパレットのz-indexを下げる

--- a/components/PMWatch/styleModules/PlayerUI/CommandPalette.css
+++ b/components/PMWatch/styleModules/PlayerUI/CommandPalette.css
@@ -1,6 +1,6 @@
 .commandpalette-wrapper {
     position: absolute;
-    z-index: 100;
+    z-index: 10;
     bottom: 2.5rem;
 }
 
